Update to reflect recent changes targeting simultaneous runs.

--- a/config.toml.example
+++ b/config.toml.example
@@ -11,27 +11,30 @@ HTTPSPort=0
 [[EVM]]
 ChainID=84532
 Enabled=true
-FinalityDepth=10
-MinContractPayment=0
+FinalityDepth=5
+MinContractPayment="0"     
 
 [EVM.GasEstimator]
 Mode = "FeeHistory"                         
 TipCapDefault = "2 gwei"
-TipCapMin     = "30000000"       # 0.03 gwei
+TipCapMin     = "30000000"          # 0.03 gwei
 FeeCapDefault = "30 gwei"
-EstimateLimit = true
+# EstimateLimit = true
 
 [EVM.HeadTracker]
-SamplingInterval = "10s"            # coalesce heads
-HistoryDepth = 50
+SamplingInterval = "30s"            # coalesce heads
+HistoryDepth = 25
 
 [EVM.NodePool]
-PollInterval   = "40s"              # optimization: each RPC is ping-checked half as often
-NewHeadsPollInterval = "15s"
+PollInterval   = "80s"              
+NewHeadsPollInterval = "30s"
+SyncThreshold = 10
 
 [EVM.Transactions]
 ReaperInterval = "30m"              # Less frequent cleanup
 ReaperThreshold = "168h"            # Keep txns longer before cleanup
+MaxInFlight = 32
+MaxQueued = 64
 
 [[EVM.Nodes]]
 Name="Base-Sepolia"
